Babel dev dependencies added.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Steve Cochrane <steve@stevecochrane.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "webpack": "^3.5.5"
   }
 }
