--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "webpack": "^3.5.5"
+  },
+  "dependencies": {
+    "express": "^4.15.4"
   }
 }
