--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "main": "dungeon-map.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dungeon-map.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
