--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "main": "dungeon-map.js",
   "scripts": {
+    "build": "webpack",
     "start": "node dungeon-map.js"
   },
   "devDependencies": {
