--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "preact": "^8.2.4",
     "webpack": "^3.5.5"
   },
   "dependencies": {
