--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "preact": "^8.2.4",
     "webpack": "^3.5.5"
