Added webpack-dev-server as a dev dependency.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "preact": "^8.2.4",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "compression": "^1.7.0",
