--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "watch": "webpack --progress --watch"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
-    "preact": "^8.2.4",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "babel-core": "~6.26.0",
+    "babel-loader": "~7.1.2",
+    "babel-plugin-transform-react-jsx": "~6.24.1",
+    "babel-preset-env": "~1.6.0",
+    "preact": "~8.2.4",
+    "webpack": "~3.5.5",
+    "webpack-dev-server": "~2.7.1"
   },
   "dependencies": {
-    "compression": "^1.7.0",
-    "express": "^4.15.4",
-    "pug": "^2.0.0-rc.3"
+    "compression": "~1.7.0",
+    "express": "~4.15.4",
+    "pug": "~2.0.0-rc.3"
   }
 }
