Add react and react-dom dependencies

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-loader": "~7.1.2",
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-preset-env": "~1.6.0",
+    "react": "~16.3.2",
+    "react-dom": "~16.3.2",
     "webpack": "~3.5.5",
     "webpack-dev-server": "~2.7.1"
   },
