--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "devDependencies": {
     "babel-core": "~6.26.0",
-    "babel-loader": "~7.1.2",
+    "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
-    "babel-preset-env": "~1.6.0",
+    "babel-preset-env": "~1.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
-    "webpack": "~3.5.5",
-    "webpack-dev-server": "~2.7.1"
+    "webpack": "~4.6.0",
+    "webpack-dev-server": "~3.1.3"
   },
   "dependencies": {
-    "compression": "~1.7.0",
-    "express": "~4.15.4",
-    "pug": "~2.0.0-rc.3"
+    "compression": "~1.7.2",
+    "express": "~4.16.3",
+    "pug": "~2.0.3"
   }
 }
