--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-preset-env": "~1.6.1",
+    "eslint": "^4.19.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
     "webpack": "~4.6.0",
