--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dungeon-map",
   "version": "0.1.0",
-  "description": "A web applicaton for mapping old videogames.",
+  "description": "A React web applicaton for mapping old videogames.",
   "author": "Steve Cochrane <steve@stevecochrane.com>",
   "license": "ISC",
   "main": "dungeon-map.js",
