Add React coverage to ESLint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,19 @@
 		"es6": true,
 		"node": true
 	},
-	"extends": "eslint:recommended",
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended"
+	],
 	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
 		"sourceType": "module"
 	},
+	"plugins": [
+		"react"
+	],
 	"rules": {
 		"quotes": ["error", "double"],
 		"semi": ["error", "always"]
