--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-preset-env": "~1.6.1",
     "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.8.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
     "webpack": "~4.6.0",
