--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "eslint-plugin-react": "^7.8.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
-    "webpack": "~4.6.0",
-    "webpack-cli": "~2.0.15",
+    "webpack": "^4.8.2",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "~3.1.3"
   },
   "dependencies": {
