--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-preset-env": "~1.6.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.8.1",
+    "eslint": "~4.19.1",
+    "eslint-loader": "~2.0.0",
+    "eslint-plugin-react": "~7.8.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
-    "webpack": "^4.8.2",
-    "webpack-cli": "^2.1.3",
+    "webpack": "~4.8.2",
+    "webpack-cli": "~2.1.3",
     "webpack-dev-server": "~3.1.3"
   },
   "dependencies": {
