--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
+    "prop-types": "^15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
     "webpack": "~4.8.2",
