--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-preset-env": "~1.6.1",
+    "css-loader": "^0.28.11",
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
+    "style-loader": "^0.21.0",
     "webpack": "~4.8.2",
     "webpack-cli": "~2.1.3",
     "webpack-dev-server": "~3.1.3"
