--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch": "webpack --progress --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^8.4.1",
     "babel-core": "~6.26.0",
     "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
@@ -21,6 +22,7 @@
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
+    "postcss-loader": "^2.1.5",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
