--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "compression": "~1.7.2",
     "express": "~4.16.3",
+    "normalize.css": "^8.0.0",
     "pug": "~2.0.3"
   }
 }
