--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:css": "stylelint css/*.css",
     "lint:js": "eslint --ignore-path .eslintignore --cache .",
     "server": "node dungeon-map.js",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-serve --open",
     "watch": "webpack --mode=development --progress --watch"
   },
   "devDependencies": {
@@ -35,7 +35,7 @@
     "stylelint": "^9.2.0",
     "webpack": "~4.8.2",
     "webpack-cli": "~2.1.3",
-    "webpack-dev-server": "~3.1.3"
+    "webpack-serve": "^0.3.2"
   },
   "dependencies": {
     "compression": "~1.7.2",
