--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "main": "dungeon-map.js",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack --config webpack.prod.config.js",
     "lint:css": "stylelint css/*.css",
     "lint:js": "eslint --ignore-path .eslintignore --cache .",
     "server": "node dungeon-map.js",
-    "start": "webpack-serve --open",
-    "watch": "webpack --mode=development --progress --watch"
+    "start": "webpack-serve --config webpack.dev.config.js --open",
+    "watch": "webpack --config webpack.dev.config.js --progress --watch"
   },
   "devDependencies": {
     "autoprefixer": "^8.4.1",
