--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "postcss-loader": "^2.1.5",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
