Add clean-webpack-plugin and lock down versioning on package.json

--- a/package.json
+++ b/package.json
@@ -18,25 +18,27 @@
     "watch": "webpack --config webpack/development.js --progress --watch"
   },
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "~8.4.1",
     "babel-core": "~6.26.0",
     "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-preset-env": "~1.6.1",
-    "css-loader": "^0.28.11",
+    "clean-webpack-plugin": "~0.1.19",
+    "css-loader": "~0.28.11",
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "postcss-loader": "^2.1.5",
-    "prop-types": "^15.6.1",
+    "extract-text-webpack-plugin": "~3.0.2",
+    "postcss-loader": "~2.1.5",
+    "prop-types": "~15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
-    "style-loader": "^0.21.0",
-    "stylelint": "^9.2.0",
+    "style-loader": "~0.21.0",
+    "stylelint": "~9.2.0",
     "webpack": "~4.8.2",
     "webpack-cli": "~2.1.3",
-    "webpack-serve": "^0.3.2"
+    "webpack-merge": "~4.1.2",
+    "webpack-serve": "~0.3.2"
   },
   "dependencies": {
     "compression": "~1.7.2",
