--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-preset-env": "~1.6.1",
     "clean-webpack-plugin": "~0.1.19",
     "css-loader": "~0.28.11",
+    "cssnano": "~3.10.0",
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
     "mini-css-extract-plugin": "~0.4.0",
+    "optimize-css-assets-webpack-plugin": "~4.0.1",
     "postcss-loader": "~2.1.5",
     "prop-types": "~15.6.1",
     "react": "~16.3.2",
