--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
+    "html-webpack-plugin": "~3.2.0",
     "mini-css-extract-plugin": "~0.4.0",
     "optimize-css-assets-webpack-plugin": "~4.0.1",
     "postcss-loader": "~2.1.5",
