--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "~7.8.1",
     "html-webpack-plugin": "~3.2.0",
     "mini-css-extract-plugin": "~0.4.0",
+    "normalize.css": "~8.0.0",
     "optimize-css-assets-webpack-plugin": "~4.0.1",
     "postcss-loader": "~2.1.5",
     "prop-types": "~15.6.1",
@@ -47,7 +48,6 @@
   "dependencies": {
     "compression": "~1.7.2",
     "express": "~4.16.3",
-    "normalize.css": "^8.0.0",
     "pug": "~2.0.3"
   }
 }
