--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "~4.19.1",
     "eslint-loader": "~2.0.0",
     "eslint-plugin-react": "~7.8.1",
+    "html-loader": "~0.5.5",
     "html-webpack-plugin": "~3.2.0",
     "mini-css-extract-plugin": "~0.4.0",
     "normalize.css": "~8.0.0",
@@ -47,7 +48,6 @@
   },
   "dependencies": {
     "compression": "~1.7.2",
-    "express": "~4.16.3",
-    "pug": "~2.0.3"
+    "express": "~4.16.3"
   }
 }
