--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "~16.3.2",
     "style-loader": "~0.21.0",
     "stylelint": "~9.2.0",
+    "tailwindcss": "^0.5.3",
     "uglifyjs-webpack-plugin": "~1.2.5",
     "webpack": "~4.8.2",
     "webpack-cli": "~2.1.3",
