--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "watch": "webpack --config webpack/development.js --progress --watch"
   },
   "devDependencies": {
+    "@babel/core": "~7.1.6",
+    "@babel/polyfill": "~7.0.0",
+    "@babel/preset-env": "~7.1.6",
     "autoprefixer": "~8.4.1",
-    "babel-core": "~6.26.0",
     "babel-loader": "~7.1.4",
     "babel-plugin-transform-react-jsx": "~6.24.1",
-    "babel-preset-env": "~1.6.1",
     "clean-webpack-plugin": "~0.1.19",
     "css-loader": "~0.28.11",
     "cssnano": "~3.10.0",
