--- a/package.json
+++ b/package.json
@@ -18,33 +18,33 @@
     "watch": "webpack --config webpack/development.js --progress --watch"
   },
   "devDependencies": {
-    "@babel/core": "~7.1.6",
-    "@babel/polyfill": "~7.0.0",
-    "@babel/preset-env": "~7.1.6",
-    "autoprefixer": "~8.4.1",
-    "babel-loader": "~7.1.4",
-    "babel-plugin-transform-react-jsx": "~6.24.1",
-    "clean-webpack-plugin": "~0.1.19",
-    "css-loader": "~0.28.11",
-    "cssnano": "~3.10.0",
-    "eslint": "~4.19.1",
-    "eslint-loader": "~2.0.0",
-    "eslint-plugin-react": "~7.8.1",
-    "html-webpack-plugin": "~3.2.0",
-    "mini-css-extract-plugin": "~0.4.0",
-    "optimize-css-assets-webpack-plugin": "~4.0.1",
-    "postcss-loader": "~2.1.5",
-    "prop-types": "~15.6.1",
-    "react": "~16.3.2",
-    "react-dom": "~16.3.2",
-    "style-loader": "~0.21.0",
-    "stylelint": "~9.2.0",
-    "tailwindcss": "^0.5.3",
-    "uglifyjs-webpack-plugin": "~1.2.5",
-    "webpack": "~4.8.2",
-    "webpack-cli": "~2.1.3",
-    "webpack-merge": "~4.1.2",
-    "webpack-serve": "~0.3.2"
+    "@babel/core": "7.2.2",
+    "@babel/polyfill": "7.2.5",
+    "@babel/preset-env": "7.3.1",
+    "autoprefixer": "9.4.7",
+    "babel-loader": "8.0.5",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "clean-webpack-plugin": "1.0.1",
+    "css-loader": "2.1.0",
+    "cssnano": "4.1.8",
+    "eslint": "5.13.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-react": "7.12.4",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-loader": "3.0.0",
+    "prop-types": "15.7.1",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "style-loader": "0.23.1",
+    "stylelint": "9.10.1",
+    "tailwindcss": "0.7.4",
+    "uglifyjs-webpack-plugin": "2.1.1",
+    "webpack": "4.29.3",
+    "webpack-cli": "3.2.3",
+    "webpack-merge": "4.2.1",
+    "webpack-serve": "2.0.2"
   },
   "dependencies": {
     "compression": "~1.7.2",
