--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:css": "stylelint css/*.css",
     "lint:js": "eslint --ignore-path .eslintignore --cache .",
     "server": "node dungeon-map.js",
-    "start": "webpack-serve --config webpack/development.js --open",
+    "start": "webpack-dev-server --config webpack/development.js",
     "watch": "webpack --config webpack/development.js --progress --watch"
   },
   "devDependencies": {
@@ -43,8 +43,8 @@
     "uglifyjs-webpack-plugin": "2.1.1",
     "webpack": "4.29.3",
     "webpack-cli": "3.2.3",
-    "webpack-merge": "4.2.1",
-    "webpack-serve": "2.0.2"
+    "webpack-dev-server": "3.1.14",
+    "webpack-merge": "4.2.1"
   },
   "dependencies": {
     "compression": "~1.7.2",
