--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "16.8.1",
     "style-loader": "0.23.1",
     "stylelint": "9.10.1",
+    "stylelint-config-recommended": "2.1.0",
     "tailwindcss": "0.7.4",
     "uglifyjs-webpack-plugin": "2.1.1",
     "webpack": "4.29.3",
