--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
-    "compression": "~1.7.2",
-    "express": "~4.16.3"
+    "compression": "1.7.3",
+    "express": "4.16.4"
   }
 }
