--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "prop-types": "15.7.1",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-redux": "6.0.1",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.8",
     "style-loader": "0.23.1",
     "stylelint": "9.10.1",
     "stylelint-config-recommended": "2.1.0",
