Modernize Babel setup

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,16 @@
 {
 	"presets": [
+		["@babel/preset-react"],
 		[
 			"@babel/preset-env",
 			{
+				"corejs": {
+					"proposals": true,
+					"version": 3
+				},
 				"useBuiltIns": "usage"
 			}
 		]
 	],
-	"plugins": [
-		["@babel/plugin-transform-react-jsx"]
-	]
+	"plugins": []
 }
