--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "watch": "webpack --config webpack/development.js --progress --watch"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/plugin-transform-react-jsx": "7.3.0",
-    "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "7.3.1",
+    "@babel/core": "7.8.0",
+    "@babel/preset-env": "7.8.0",
+    "@babel/preset-react": "7.8.0",
     "autoprefixer": "9.4.7",
     "babel-loader": "8.0.5",
     "clean-webpack-plugin": "1.0.1",
+    "core-js": "3.6.3",
     "css-loader": "2.1.0",
     "cssnano": "4.1.10",
     "eslint": "5.13.0",
