--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "stylelint": "9.10.1",
     "stylelint-config-recommended": "2.1.0",
     "tailwindcss": "1.1.4",
+    "tailwindcss-transitions": "2.1.0",
     "terser-webpack-plugin": "2.3.1",
     "webpack": "4.29.3",
     "webpack-cli": "3.2.3",
