--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "7.8.0",
     "@babel/preset-env": "7.8.0",
     "@babel/preset-react": "7.8.0",
+    "@testing-library/react": "10.0.1",
     "autoprefixer": "9.4.7",
     "babel-loader": "8.0.5",
     "clean-webpack-plugin": "1.0.1",
@@ -31,6 +32,7 @@
     "eslint-loader": "2.1.2",
     "eslint-plugin-react": "7.12.4",
     "html-webpack-plugin": "3.2.0",
+    "jest": "25.1.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
