--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
+    "prettier": "1.19.1",
     "prop-types": "15.7.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
