--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
     "test": "jest --coverage",
     "watch": "webpack --config webpack/development.js --progress --watch"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.css": "stylelint",
+    "*.{js,css,html}": "prettier --write"
+  },
   "devDependencies": {
     "@babel/core": "7.8.0",
     "@babel/preset-env": "7.8.0",
@@ -34,7 +44,9 @@
     "eslint-loader": "2.1.2",
     "eslint-plugin-react": "7.12.4",
     "html-webpack-plugin": "3.2.0",
+    "husky": "4.2.3",
     "jest": "25.1.0",
+    "lint-staged": "10.0.8",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
