--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@babel/preset-react": "7.8.0",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
-    "autoprefixer": "9.4.7",
     "babel-loader": "8.0.5",
     "clean-webpack-plugin": "1.0.1",
     "core-js": "3.6.3",
@@ -50,6 +49,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
     "prop-types": "15.7.1",
     "react": "16.12.0",
