--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "7.8.0",
     "@babel/preset-env": "7.8.0",
     "@babel/preset-react": "7.8.0",
+    "@fullhuman/postcss-purgecss": "2.1.0",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
     "babel-loader": "8.0.5",
