--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:jest/recommended",
     "plugin:react/recommended"
   ],
   "parserOptions": {
@@ -17,6 +18,7 @@
     "sourceType": "module"
   },
   "plugins": [
+    "jest",
     "react"
   ],
   "rules": {
