--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cssnano": "4.1.10",
     "eslint": "5.13.0",
     "eslint-loader": "2.1.2",
+    "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-react": "7.12.4",
     "html-webpack-plugin": "3.2.0",
     "husky": "4.2.3",
