--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "10.0.1",
     "babel-loader": "8.0.5",
     "clean-webpack-plugin": "1.0.1",
+    "codecov": "3.7.0",
     "core-js": "3.6.3",
     "css-loader": "2.1.0",
     "cssnano": "4.1.10",
