--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "dungeon-map.js",
   "scripts": {
-    "build": "webpack --config webpack/production.js",
+    "build": "env NODE_ENV=production webpack --config webpack/production.js",
     "lint:css": "stylelint css/*.css",
     "lint:js": "eslint --ignore-path .eslintignore --cache .",
     "server": "node dungeon-map.js",
@@ -35,7 +35,6 @@
     "@babel/core": "7.10.2",
     "@babel/preset-env": "7.10.2",
     "@babel/preset-react": "7.10.1",
-    "@fullhuman/postcss-purgecss": "2.1.0",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
     "babel-loader": "8.0.5",
