--- a/package.json
+++ b/package.json
@@ -34,23 +34,23 @@
     "@babel/preset-react": "7.10.1",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
-    "babel-loader": "8.0.5",
-    "clean-webpack-plugin": "1.0.1",
+    "babel-loader": "8.2.2",
+    "clean-webpack-plugin": "3.0.0",
     "core-js": "3.6.3",
-    "css-loader": "2.1.0",
+    "css-loader": "5.0.1",
     "cssnano": "4.1.10",
     "eslint": "5.13.0",
-    "eslint-loader": "2.1.2",
     "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-react": "7.12.4",
-    "html-webpack-plugin": "3.2.0",
+    "eslint-webpack-plugin": "2.4.1",
+    "html-webpack-plugin": "4.5.0",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "mini-css-extract-plugin": "1.3.3",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
     "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
+    "postcss-loader": "4.1.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
     "prop-types": "15.7.1",
@@ -59,12 +59,11 @@
     "react-redux": "6.0.1",
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
-    "style-loader": "0.23.1",
+    "style-loader": "2.0.0",
     "tailwindcss": "1.6.0",
-    "terser-webpack-plugin": "2.3.1",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-merge": "4.2.1"
+    "terser-webpack-plugin": "5.0.3",
+    "webpack": "5.11.0",
+    "webpack-cli": "4.2.0",
+    "webpack-dev-server": "3.11.0"
   }
 }
