--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   },
   "scripts": {
     "build": "env NODE_ENV=production webpack --config webpack/production.js",
-    "lint:js": "eslint --ignore-path .eslintignore --cache .",
-    "start": "webpack-dev-server --config webpack/development.js",
-    "test": "jest --coverage",
-    "watch": "webpack --config webpack/development.js --progress --watch"
+    "start": "webpack serve",
+    "test": "jest --coverage"
   },
   "husky": {
     "hooks": {
@@ -38,8 +36,7 @@
     "clean-webpack-plugin": "3.0.0",
     "core-js": "3.6.3",
     "css-loader": "5.0.1",
-    "cssnano": "4.1.10",
-    "eslint": "5.13.0",
+    "eslint": "7.16.0",
     "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-react": "7.12.4",
     "eslint-webpack-plugin": "2.4.1",
