--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/stevecochrane/dungeon-map.git"
   },
   "scripts": {
-    "build": "env NODE_ENV=production webpack --config webpack/production.js",
+    "build": "env NODE_ENV=production webpack",
     "start": "webpack serve",
     "test": "jest --coverage"
   },
