--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-react": "7.10.1",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
+    "autoprefixer": "10.1.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "core-js": "3.6.3",
@@ -45,7 +46,8 @@
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
     "optimize-css-assets-webpack-plugin": "5.0.4",
-    "postcss-import": "12.0.1",
+    "postcss": "8.2.1",
+    "postcss-import": "14.0.0",
     "postcss-loader": "4.1.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
@@ -56,7 +58,7 @@
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
     "style-loader": "2.0.0",
-    "tailwindcss": "1.6.0",
+    "tailwindcss": "2.0.2",
     "terser-webpack-plugin": "5.0.3",
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
