--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "10.0.1",
     "autoprefixer": "10.1.0",
     "babel-loader": "8.2.2",
+    "babel-plugin-macros": "3.0.1",
     "clean-webpack-plugin": "3.0.0",
     "core-js": "3.8.1",
     "css-loader": "5.0.1",
@@ -58,8 +59,10 @@
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
     "style-loader": "2.0.0",
+    "styled-components": "5.2.1",
     "tailwindcss": "2.0.2",
     "terser-webpack-plugin": "5.0.3",
+    "twin.macro": "2.0.7",
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
