--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "4.2.3",
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
+    "next": "10.0.4",
     "postcss": "8.2.1",
     "postcss-loader": "4.1.0",
     "postcss-preset-env": "6.7.0",
