--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-react": "7.12.4",
     "eslint-webpack-plugin": "2.4.1",
+    "html-inline-css-webpack-plugin": "1.9.1",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
+    "mini-css-extract-plugin": "1.3.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "postcss": "8.2.1",
     "postcss-import": "14.0.0",
