--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "style-loader": "2.0.0",
     "tailwindcss": "2.0.2",
     "terser-webpack-plugin": "5.0.3",
+    "ts-loader": "8.1.0",
+    "typescript": "4.2.4",
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
