--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@babel/preset-react": "7.10.1",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
+    "@types/jest": "26.0.22",
+    "@types/node": "14.14.41",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "autoprefixer": "10.1.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
