--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-react": "7.10.1",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
+    "@types/html-webpack-plugin": "3.2.5",
     "@types/jest": "26.0.22",
     "@types/node": "14.14.41",
     "@types/react": "17.0.3",
