--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "style-loader": "2.0.0",
     "tailwindcss": "2.0.2",
     "terser-webpack-plugin": "5.0.3",
+    "ts-jest": "26.5.5",
     "ts-loader": "8.1.0",
     "typescript": "4.2.4",
     "webpack": "5.11.0",
