--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "7.10.2",
     "@babel/preset-env": "7.10.2",
     "@babel/preset-react": "7.10.1",
+    "@babel/preset-typescript": "7.13.0",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
     "@types/html-webpack-plugin": "3.2.5",
@@ -37,6 +38,7 @@
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
     "autoprefixer": "10.1.0",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "core-js": "3.8.1",
@@ -65,7 +67,6 @@
     "style-loader": "2.0.0",
     "tailwindcss": "2.0.2",
     "terser-webpack-plugin": "5.0.3",
-    "ts-jest": "26.5.5",
     "ts-loader": "8.1.0",
     "typescript": "4.2.4",
     "webpack": "5.11.0",
