Restore running tests on commit hook

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint"
+      "eslint",
+      "jest --bail --coverage --findRelatedTests"
     ],
     "*.{js,css,html}": "prettier --write"
   },
