--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
+    "allowJs": true,
     "jsx": "react",
-    "allowJs": true
+    "module": "es6",
+    "noImplicitAny": true,
+    "outDir": "./dist/",
+    "target": "es5"
   },
   "exclude": [
     "dist",
