--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,19 +7,20 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
+    "plugin:prettier/recommended",
     "plugin:react/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "plugins": [
+    "@typescript-eslint",
     "jest",
-    "react"
+    "react-hooks"
   ],
   "rules": {
     "quotes": ["error", "double"],
