--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/stevecochrane/dungeon-map.git"
   },
   "scripts": {
-    "build": "env NODE_ENV=production webpack",
+    "build": "webpack --mode production",
     "start": "webpack serve",
     "test": "jest --coverage"
   },
@@ -38,14 +38,21 @@
     "@types/node": "14.14.41",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-dev-server": "3.11.5",
+    "@typescript-eslint/eslint-plugin": "4.29.3",
+    "@typescript-eslint/parser": "4.29.3",
     "autoprefixer": "10.1.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "core-js": "3.8.1",
     "css-loader": "5.0.1",
     "eslint": "7.16.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "23.8.2",
+    "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "4.2.0",
     "eslint-webpack-plugin": "2.4.1",
     "html-inline-css-webpack-plugin": "1.9.1",
     "html-webpack-plugin": "4.5.0",
@@ -67,7 +74,7 @@
     "style-loader": "2.0.0",
     "tailwindcss": "2.0.2",
     "terser-webpack-plugin": "5.0.3",
-    "ts-loader": "8.1.0",
+    "ts-node": "10.2.1",
     "typescript": "4.2.4",
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
