--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,21 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "moduleResolution": "node",
+    "noEmit": true,
     "noImplicitAny": true,
-    "outDir": "./dist/",
     "skipLibCheck": true,
     "target": "es5"
   },
   "exclude": [
-    "dist",
     "node_modules"
+  ],
+  "include": [
+    "src"
   ]
 }
