--- a/package.json
+++ b/package.json
@@ -33,20 +33,23 @@
     "@babel/preset-typescript": "7.13.0",
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
+    "@types/css-minimizer-webpack-plugin": "3.0.2",
+    "@types/fork-ts-checker-webpack-plugin": "0.4.5",
     "@types/html-webpack-plugin": "3.2.5",
     "@types/jest": "26.0.22",
+    "@types/mini-css-extract-plugin": "2.2.0",
     "@types/node": "14.14.41",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
-    "@types/webpack": "5.28.0",
+    "@types/terser-webpack-plugin": "5.0.4",
     "@types/webpack-dev-server": "3.11.5",
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
     "autoprefixer": "10.1.0",
     "babel-loader": "8.2.2",
-    "clean-webpack-plugin": "3.0.0",
     "core-js": "3.8.1",
     "css-loader": "5.0.1",
+    "css-minimizer-webpack-plugin": "3.0.2",
     "eslint": "7.16.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "23.8.2",
@@ -54,13 +57,13 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-webpack-plugin": "2.4.1",
-    "html-inline-css-webpack-plugin": "1.9.1",
-    "html-webpack-plugin": "4.5.0",
+    "fork-ts-checker-webpack-plugin": "6.3.2",
+    "html-inline-css-webpack-plugin": "1.11.1",
+    "html-webpack-plugin": "5.3.2",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
-    "mini-css-extract-plugin": "1.3.3",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "mini-css-extract-plugin": "2.2.0",
     "postcss": "8.2.10",
     "postcss-import": "14.0.0",
     "postcss-loader": "4.1.0",
@@ -76,8 +79,8 @@
     "terser-webpack-plugin": "5.0.3",
     "ts-node": "10.2.1",
     "typescript": "4.2.4",
-    "webpack": "5.11.0",
-    "webpack-cli": "4.2.0",
+    "webpack": "5.51.1",
+    "webpack-cli": "4.8.0",
     "webpack-dev-server": "3.11.0"
   }
 }
