--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "14.14.41",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@types/react-redux": "7.1.18",
     "@types/terser-webpack-plugin": "5.0.4",
     "@types/webpack-dev-server": "3.11.5",
     "@typescript-eslint/eslint-plugin": "4.29.3",
